# FPrime_CNN

./: .gitignore  DEPLOY_GUIDE.md  README.md
fprime_workspace/Components/TransientDetector/: CMakeLists.txt  TransientDetector.cpp  TransientDetector.fpp  TransientDetector.hpp  model_data.h
ml_pipeline/: evaluate.py  evaluate_real_data.py  export_to_c.py  fetch_real_data.py  generate_dataset.py  quantize.py  requirements.txt  setup_ml.sh  simulate.py  simulate_visual.html  simulation_results.json  train.py
